tests/cases/errors/event_posedge_unsupported/main.sv
module Top;
  logic clk;
  initial begin
    @(posedge clk);
  end
endmodule
